# habitica-rust-client

./: .travis.yml  Cargo.toml  README.md  test.json
ci/: publish.sh
resources/test/: get_tasks_response.json
src/: api_credentials.rs  habitica_client.rs  lib.rs
src/task/: api_credentials.rs  habitica_client.rs  mod.rs  rest_client.rs  tasks.rs
tests/: task_integration_test.rs
