[package]
name = "habitica_rust_client"
version = "0.1.5"
authors = ["Dawson Israel <dawsonfi@gmail.com>"]
license = "MIT"
description = "Unnoficial Habitica Api Rust Client"

[badges]
travis-ci = { repository = "dawsonfi/habitica-rust-client", branch = "master" }
codecov = { repository = "dawsonfi/habitica-rust-client", branch = "master", service = "github" }

[dependencies]
reqwest = "0.8.5"
serde = "1.0.53"
serde_json = "1.0.17"
serde_derive = "1.0.53"
